--- a/ui_ux_quiz_flashcards_single_file_website.html
+++ b/ui_ux_quiz_flashcards_single_file_website.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>UI/UX Quiz & Flashcards</title>
+  <title>index.html
+</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <meta name="theme-color" content="#111827" />
   <style>
